samples/_failures_safe/1761357075_516881_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3fc15de.c: In function ‘main’:
./samples/SAFE/__tmp_c3fc15de.c:157:17: error: expected expression at end of input
  157 |                 if (
      |                 ^~
./samples/SAFE/__tmp_c3fc15de.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3fc15de.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3fc15de.c:157:17: error: expected declaration or statement at end of input
